# kafka-connect-watcher

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  configuration.example.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml
.codebuild/: buildspec.yml  buildspec_image.yml  codebuild_projects.template
docs/: aws_emf_metrics.rst  conf.py  configuration_file.rst  examples.rst  index.rst  installation.rst  requisites.rst
kafka_connect_watcher/: __init__.py  aws_emf.py  cli.py  cluster.py  config.py  connectors_eval.py  error_rules.py  logger.py  notifications.py  threads_settings.py  tools.py  watcher-config.spec.json  watcher.py
kafka_connect_watcher/aws_sns/: __init__.py  default.j2  email.j2  sms.j2
tests/: test_config.py  test_connectors_eval.py  test_error_rules.py
tests/fixtures/: mock_config.py
tests/fixtures/configs/: test_config.yaml
