[tool.poetry]
name = "kafka-connect-watcher"
version = "0.2.0"
description = ""
authors = ["John \"Preston\" Mille <john@ews-network.net>"]
readme = "README.rst"
packages = [{ include = "kafka_connect_watcher" }]
include = [
  "kafka_connect_watcher/**/*.json",
  "kafka_connect_watcher/**/*.j2"
]
exclude = ["*.pyc", "*~", "*pycache*"]


[tool.poetry.urls]
"GitHub" = "https://github.com/johnpreston/kafka-connect-watcher"

[tool.poetry.scripts]
kafka_connect_watcher = "kafka_connect_watcher.cli:start_watcher"
kafka-connect-watcher = "kafka_connect_watcher.cli:start_watcher"

[tool.poetry.dependencies]
python = "^3.8"
compose-x-common = "^1.2"
kafka-connect-api = "^0.5.3"
pyyaml = "^6.0"
jsonschema = "^4.17.3"
importlib-resources = "^5.10"
prometheus-client = "^0.16"
aws-embedded-metrics = "^3.0.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1"
isort = "^5.12"
pre-commit = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = "kelvin"

[tool.coverage.report]
exclude_lines = [
  "if __name__ == '__main__'"
]

[tool.coverage.run]
omit = [
  "*/cli.py"
]

[tool.tbump]
github_url = "https://github.com/johnpreston/kafka-connect-watcher"

[tool.tbump.version]
current = "0.2.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?:(?P<rc>[\S]+))?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "kafka_connect_watcher/__init__.py"
